--- a/index.html
+++ b/index.html
@@ -55,8 +55,40 @@
 	</p>
 
 
-	<p></p>
+	<p>Name/ value pair:
+		a name which maps to a value 
+		<code>the name may be defined more than once, bu only 
+			can have one value in any give CONTEXT.
+			that value may be more name/value pairs.
+		</code>
+		example: const Address = 'St. Riventus';
+	</p>
 	
+	<p>Object: a collection of name/value pairs
+		<code>simplest definition when talking about JS</code>
+	</p>
+
+	<p>Object literal: 
+		name/value pairs separated by commas and 
+		surrounded by curly braces 
+		<code>this is just a quick, shorthand way to create Js objects in code</code>
+	</p>
 	
+	<p>Ingeritance :
+		one object gets access to the properties and methods of 
+		another object.
+	</p>
+
+	<p>Function Constructors:
+		normal function that is used to construct objects.
+		<code>The 'this' variable points a new empty object, and that object is returned from the function automatically.</code>
+	</p>
+
+	<p>Primitive:
+		a type of data that represents a single value
+		<code>Like a number or a string. in other words, not an object.</code>
+	</p>
+
+
 </body>
 </html>
